workload/apps/kyverno/templates/kyverno-networkPolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-kyverno
  namespace: kyverno
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-prometheus-stack
      ports:
        - protocol: TCP
          port: 8000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 15008
        - protocol: TCP
          port: 9443
        - protocol: TCP
          port: 8443
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
